--- a/WebApplication8/Views/Wellcome/Login.cshtml
+++ b/WebApplication8/Views/Wellcome/Login.cshtml
@@ -1,8 +1,7 @@
 ﻿@model WebApplication8.Models.User
 
-<h2 style="background-color:burlywood">Login page</h2>
+<h2>Login Page</h2>
 
-<
 
 <form method="post">
 
@@ -12,7 +11,7 @@
 		<input type="text" id="Username" name="Username" required />
 	</div>
 
-	<div class="col-12">
+	<div class="col-2">
 		<label for="Password">Password</label>
 		<input type="text" id="Password" name="Password" required />
 	</div>
