Forget,rest change password

--- a/WebApplication8/Views/Wellcome/Login.cshtml
+++ b/WebApplication8/Views/Wellcome/Login.cshtml
@@ -2,6 +2,7 @@
 
 <h2>Login Page</h2>
 
+<a href="/Wellcome/Register">If you do not have account, please Register here !</a>
 
 <form method="post">
 
@@ -21,3 +22,5 @@
 	</div>
 
 </form>
+
+<a href="/Wellcome/Changepassword">Reset Password</a>
